feat(cleaner): 改进应用活动数据清洗与提示词逻辑
- 在 DataCleaner 中引入标题价值评估，过滤配置、日志等低价值文件
- 将应用活动数据按应用名称分组，聚合时长并收集唯一高价值标题
- 更新提示词以明确 AI IDE 上下文处理及高价值标题的推断逻辑
- 更新示例词云数据以反映新的分类结果

--- a/wordcloud_1d.html
+++ b/wordcloud_1d.html
@@ -9,11 +9,11 @@
     
 </head>
 <body >
-    <div id="2b526a29163944bd80675956982025c0" class="chart-container" style="width:900px; height:500px; "></div>
+    <div id="bc2c80240e2548a7ae04647fcd9014b0" class="chart-container" style="width:900px; height:500px; "></div>
     <script>
-        var chart_2b526a29163944bd80675956982025c0 = echarts.init(
-            document.getElementById('2b526a29163944bd80675956982025c0'), 'white', {renderer: 'canvas', locale: 'ZH'});
-        var option_2b526a29163944bd80675956982025c0 = {
+        var chart_bc2c80240e2548a7ae04647fcd9014b0 = echarts.init(
+            document.getElementById('bc2c80240e2548a7ae04647fcd9014b0'), 'white', {renderer: 'canvas', locale: 'ZH'});
+        var option_bc2c80240e2548a7ae04647fcd9014b0 = {
     "animation": true,
     "animationThreshold": 2000,
     "animationDuration": 1000,
@@ -53,31 +53,31 @@
             ],
             "data": [
                 {
-                    "name": "AI and Machine Learning",
-                    "value": 85.0,
+                    "name": "AI-Assisted Development",
+                    "value": 45.0,
                     "textStyle": {
-                        "color": "rgb(53,128,155)"
+                        "color": "rgb(6,144,3)"
                     }
                 },
                 {
-                    "name": "Aviation and Aerospace",
-                    "value": 65.0,
+                    "name": "Python Development",
+                    "value": 35.0,
                     "textStyle": {
-                        "color": "rgb(63,109,88)"
+                        "color": "rgb(8,140,51)"
                     }
                 },
                 {
-                    "name": "Feishu Open Platform",
-                    "value": 90.0,
+                    "name": "Trae AI",
+                    "value": 55.00000000000001,
                     "textStyle": {
-                        "color": "rgb(147,156,95)"
+                        "color": "rgb(96,35,7)"
                     }
                 },
                 {
-                    "name": "GitHub",
-                    "value": 75.0,
+                    "name": "\u98de\u4e66\u5f00\u653e\u5e73\u53f0",
+                    "value": 45.0,
                     "textStyle": {
-                        "color": "rgb(77,81,138)"
+                        "color": "rgb(102,102,136)"
                     }
                 }
             ],
@@ -148,7 +148,7 @@
         }
     ]
 };
-        chart_2b526a29163944bd80675956982025c0.setOption(option_2b526a29163944bd80675956982025c0);
+        chart_bc2c80240e2548a7ae04647fcd9014b0.setOption(option_bc2c80240e2548a7ae04647fcd9014b0);
     </script>
 </body>
 </html>
