feat: 支持按天数配置关键词数量限制并优化数据清洗
- 新增配置项 `llm.topn_by_days`，支持为1天和7天分析设置独立的技能与工具关键词数量限制
- 在 `FeishuPusher.push_keywords` 和 LLM 提示中应用独立的数量限制
- 数据清洗增强：修复标题截断、识别并屏蔽聊天机器人会话、支持应用分组标题
- 新增人工审核脚本 `core/human_audit.py` 用于 LLM 与 NLP 关键词提取的对比评估
- 在 LLM 后处理中，将容器类工具（如浏览器、IDE）从技能类别移至工具类别
- 更新依赖，添加 `requests>=2.31.0` 到 requirements.txt

--- a/wordcloud_7d.html
+++ b/wordcloud_7d.html
@@ -9,11 +9,11 @@
     
 </head>
 <body >
-    <div id="1c5e99af635c4a5ca31d2238e5d8e70e" class="chart-container" style="width:900px; height:500px; "></div>
+    <div id="54e8b8a6c64a418f9a864a30b105a933" class="chart-container" style="width:900px; height:500px; "></div>
     <script>
-        var chart_1c5e99af635c4a5ca31d2238e5d8e70e = echarts.init(
-            document.getElementById('1c5e99af635c4a5ca31d2238e5d8e70e'), 'white', {renderer: 'canvas', locale: 'ZH'});
-        var option_1c5e99af635c4a5ca31d2238e5d8e70e = {
+        var chart_54e8b8a6c64a418f9a864a30b105a933 = echarts.init(
+            document.getElementById('54e8b8a6c64a418f9a864a30b105a933'), 'white', {renderer: 'canvas', locale: 'ZH'});
+        var option_54e8b8a6c64a418f9a864a30b105a933 = {
     "animation": true,
     "animationThreshold": 2000,
     "animationDuration": 1000,
@@ -53,73 +53,73 @@
             ],
             "data": [
                 {
-                    "name": "AI Development",
-                    "value": 95.0,
+                    "name": "AI-Assisted Development",
+                    "value": 80.0,
                     "textStyle": {
-                        "color": "rgb(158,4,53)"
+                        "color": "rgb(81,33,98)"
                     }
                 },
                 {
-                    "name": "Chatbot Development",
-                    "value": 85.0,
+                    "name": "Programming and Scripting",
+                    "value": 70.0,
                     "textStyle": {
-                        "color": "rgb(104,48,120)"
+                        "color": "rgb(95,156,55)"
                     }
                 },
                 {
                     "name": "Data Analysis",
-                    "value": 75.0,
+                    "value": 60.0,
                     "textStyle": {
-                        "color": "rgb(33,135,83)"
+                        "color": "rgb(86,45,140)"
                     }
                 },
                 {
-                    "name": "Project Management",
-                    "value": 65.0,
+                    "name": "Workflow Automation",
+                    "value": 50.0,
                     "textStyle": {
-                        "color": "rgb(52,82,88)"
+                        "color": "rgb(71,130,84)"
                     }
                 },
                 {
-                    "name": "Political Analysis",
-                    "value": 55.00000000000001,
+                    "name": "Product Management",
+                    "value": 40.0,
                     "textStyle": {
-                        "color": "rgb(59,23,82)"
+                        "color": "rgb(151,136,112)"
                     }
                 },
                 {
-                    "name": "\u98de\u4e66\u5f00\u653e\u5e73\u53f0",
-                    "value": 95.0,
+                    "name": "Feishu",
+                    "value": 90.0,
                     "textStyle": {
-                        "color": "rgb(38,31,126)"
+                        "color": "rgb(28,56,123)"
                     }
                 },
                 {
-                    "name": "GitHub",
-                    "value": 85.0,
+                    "name": "Zhihu",
+                    "value": 80.0,
                     "textStyle": {
-                        "color": "rgb(69,84,136)"
-                    }
-                },
-                {
-                    "name": "\u77e5\u4e4e",
-                    "value": 75.0,
-                    "textStyle": {
-                        "color": "rgb(102,112,157)"
+                        "color": "rgb(136,146,64)"
                     }
                 },
                 {
                     "name": "Chrome",
-                    "value": 65.0,
+                    "value": 70.0,
                     "textStyle": {
-                        "color": "rgb(51,65,52)"
+                        "color": "rgb(78,93,30)"
                     }
                 },
                 {
-                    "name": "ChatGPT",
-                    "value": 55.00000000000001,
+                    "name": "ActivityWatch Web Watcher",
+                    "value": 60.0,
                     "textStyle": {
-                        "color": "rgb(77,141,119)"
+                        "color": "rgb(114,5,126)"
+                    }
+                },
+                {
+                    "name": "Sass-Node Chatshare",
+                    "value": 50.0,
+                    "textStyle": {
+                        "color": "rgb(81,66,10)"
                     }
                 }
             ],
@@ -190,7 +190,7 @@
         }
     ]
 };
-        chart_1c5e99af635c4a5ca31d2238e5d8e70e.setOption(option_1c5e99af635c4a5ca31d2238e5d8e70e);
+        chart_54e8b8a6c64a418f9a864a30b105a933.setOption(option_54e8b8a6c64a418f9a864a30b105a933);
     </script>
 </body>
 </html>
