chore: 更新忽略文件、添加调试日志并优化人工审核逻辑
- 向 .gitignore 添加 logs 目录和 .trae 文件
- 在 core/main.py 中添加 TopN 限制的调试打印语句
- 重构 core/human_audit.py，提取 LLM 关键词提取逻辑，增加切片级 LLM 提取的可配置性
- 更新 wordcloud 文件中的图表 ID 和数据

--- a/wordcloud_7d.html
+++ b/wordcloud_7d.html
@@ -9,11 +9,11 @@
     
 </head>
 <body >
-    <div id="54e8b8a6c64a418f9a864a30b105a933" class="chart-container" style="width:900px; height:500px; "></div>
+    <div id="ca452877fa434f28b6a70babc8d638af" class="chart-container" style="width:900px; height:500px; "></div>
     <script>
-        var chart_54e8b8a6c64a418f9a864a30b105a933 = echarts.init(
-            document.getElementById('54e8b8a6c64a418f9a864a30b105a933'), 'white', {renderer: 'canvas', locale: 'ZH'});
-        var option_54e8b8a6c64a418f9a864a30b105a933 = {
+        var chart_ca452877fa434f28b6a70babc8d638af = echarts.init(
+            document.getElementById('ca452877fa434f28b6a70babc8d638af'), 'white', {renderer: 'canvas', locale: 'ZH'});
+        var option_ca452877fa434f28b6a70babc8d638af = {
     "animation": true,
     "animationThreshold": 2000,
     "animationDuration": 1000,
@@ -54,72 +54,107 @@
             "data": [
                 {
                     "name": "AI-Assisted Development",
-                    "value": 80.0,
+                    "value": 75.0,
                     "textStyle": {
-                        "color": "rgb(81,33,98)"
+                        "color": "rgb(57,141,101)"
                     }
                 },
                 {
-                    "name": "Programming and Scripting",
-                    "value": 70.0,
+                    "name": "Programming",
+                    "value": 65.0,
                     "textStyle": {
-                        "color": "rgb(95,156,55)"
+                        "color": "rgb(5,16,81)"
                     }
                 },
                 {
                     "name": "Data Analysis",
-                    "value": 60.0,
+                    "value": 45.0,
                     "textStyle": {
-                        "color": "rgb(86,45,140)"
+                        "color": "rgb(15,78,50)"
                     }
                 },
                 {
                     "name": "Workflow Automation",
-                    "value": 50.0,
+                    "value": 35.0,
                     "textStyle": {
-                        "color": "rgb(71,130,84)"
+                        "color": "rgb(135,89,3)"
+                    }
+                },
+                {
+                    "name": "Machine Learning",
+                    "value": 30.0,
+                    "textStyle": {
+                        "color": "rgb(126,97,25)"
                     }
                 },
                 {
                     "name": "Product Management",
-                    "value": 40.0,
+                    "value": 25.0,
                     "textStyle": {
-                        "color": "rgb(151,136,112)"
+                        "color": "rgb(108,77,148)"
                     }
                 },
                 {
-                    "name": "Feishu",
-                    "value": 90.0,
+                    "name": "Project Management",
+                    "value": 20.0,
                     "textStyle": {
-                        "color": "rgb(28,56,123)"
+                        "color": "rgb(51,132,7)"
                     }
                 },
                 {
-                    "name": "Zhihu",
-                    "value": 80.0,
+                    "name": "API Development",
+                    "value": 15.0,
                     "textStyle": {
-                        "color": "rgb(136,146,64)"
+                        "color": "rgb(103,147,36)"
+                    }
+                },
+                {
+                    "name": "Web Development",
+                    "value": 10.0,
+                    "textStyle": {
+                        "color": "rgb(100,133,131)"
+                    }
+                },
+                {
+                    "name": "Natural Language Processing",
+                    "value": 5.0,
+                    "textStyle": {
+                        "color": "rgb(58,9,27)"
                     }
                 },
                 {
                     "name": "Chrome",
+                    "value": 80.0,
+                    "textStyle": {
+                        "color": "rgb(90,98,150)"
+                    }
+                },
+                {
+                    "name": "Feishu",
                     "value": 70.0,
                     "textStyle": {
-                        "color": "rgb(78,93,30)"
+                        "color": "rgb(146,135,59)"
                     }
                 },
                 {
-                    "name": "ActivityWatch Web Watcher",
+                    "name": "Zhihu",
                     "value": 60.0,
                     "textStyle": {
-                        "color": "rgb(114,5,126)"
+                        "color": "rgb(4,145,48)"
                     }
                 },
                 {
-                    "name": "Sass-Node Chatshare",
+                    "name": "ActivityWatch",
                     "value": 50.0,
                     "textStyle": {
-                        "color": "rgb(81,66,10)"
+                        "color": "rgb(153,143,125)"
+                    }
+                },
+                {
+                    "name": "ChatShare AI",
+                    "value": 40.0,
+                    "textStyle": {
+                        "color": "rgb(19,118,31)"
                     }
                 }
             ],
@@ -190,7 +225,7 @@
         }
     ]
 };
-        chart_54e8b8a6c64a418f9a864a30b105a933.setOption(option_54e8b8a6c64a418f9a864a30b105a933);
+        chart_ca452877fa434f28b6a70babc8d638af.setOption(option_ca452877fa434f28b6a70babc8d638af);
     </script>
 </body>
 </html>
