--- a/wordcloud_1d.html
+++ b/wordcloud_1d.html
@@ -9,11 +9,11 @@
     
 </head>
 <body >
-    <div id="bc2c80240e2548a7ae04647fcd9014b0" class="chart-container" style="width:900px; height:500px; "></div>
+    <div id="93057d7701694269a06bff6eff7b907e" class="chart-container" style="width:900px; height:500px; "></div>
     <script>
-        var chart_bc2c80240e2548a7ae04647fcd9014b0 = echarts.init(
-            document.getElementById('bc2c80240e2548a7ae04647fcd9014b0'), 'white', {renderer: 'canvas', locale: 'ZH'});
-        var option_bc2c80240e2548a7ae04647fcd9014b0 = {
+        var chart_93057d7701694269a06bff6eff7b907e = echarts.init(
+            document.getElementById('93057d7701694269a06bff6eff7b907e'), 'white', {renderer: 'canvas', locale: 'ZH'});
+        var option_93057d7701694269a06bff6eff7b907e = {
     "animation": true,
     "animationThreshold": 2000,
     "animationDuration": 1000,
@@ -53,31 +53,59 @@
             ],
             "data": [
                 {
-                    "name": "AI-Assisted Development",
+                    "name": "Python Development",
                     "value": 45.0,
                     "textStyle": {
-                        "color": "rgb(6,144,3)"
+                        "color": "rgb(52,128,25)"
                     }
                 },
                 {
-                    "name": "Python Development",
+                    "name": "Git and Version Control",
                     "value": 35.0,
                     "textStyle": {
-                        "color": "rgb(8,140,51)"
+                        "color": "rgb(103,131,120)"
+                    }
+                },
+                {
+                    "name": "AI-Assisted Development",
+                    "value": 25.0,
+                    "textStyle": {
+                        "color": "rgb(85,70,54)"
+                    }
+                },
+                {
+                    "name": "Data Analysis",
+                    "value": 15.0,
+                    "textStyle": {
+                        "color": "rgb(30,62,96)"
+                    }
+                },
+                {
+                    "name": "Workflow Automation",
+                    "value": 10.0,
+                    "textStyle": {
+                        "color": "rgb(92,13,89)"
                     }
                 },
                 {
                     "name": "Trae AI",
-                    "value": 55.00000000000001,
+                    "value": 50.0,
                     "textStyle": {
-                        "color": "rgb(96,35,7)"
+                        "color": "rgb(35,17,3)"
                     }
                 },
                 {
-                    "name": "\u98de\u4e66\u5f00\u653e\u5e73\u53f0",
-                    "value": 45.0,
+                    "name": "GitHub",
+                    "value": 30.0,
                     "textStyle": {
-                        "color": "rgb(102,102,136)"
+                        "color": "rgb(14,67,121)"
+                    }
+                },
+                {
+                    "name": "DBeaver",
+                    "value": 20.0,
+                    "textStyle": {
+                        "color": "rgb(15,9,134)"
                     }
                 }
             ],
@@ -148,7 +176,7 @@
         }
     ]
 };
-        chart_bc2c80240e2548a7ae04647fcd9014b0.setOption(option_bc2c80240e2548a7ae04647fcd9014b0);
+        chart_93057d7701694269a06bff6eff7b907e.setOption(option_93057d7701694269a06bff6eff7b907e);
     </script>
 </body>
 </html>
