feat(chatbot): 集成聊天会话分析流水线，支持飞书收件箱自动导入
- 新增聊天会话压缩、清洗、合并及关键词提取模块
- 扩展 ActivityWatch 数据清洗器以支持聊天机器人域统计
- 为飞书收件箱添加文件下载、会话提取和自动推送功能
- 新增配置选项，支持多源聊天数据收集（文件系统、CherryStudio）
- 更新主分析流水线，合并聊天会话关键词并调整词云生成
- 添加相关单元测试，确保核心功能可靠性

--- a/wordcloud_7d.html
+++ b/wordcloud_7d.html
@@ -9,11 +9,11 @@
     
 </head>
 <body >
-    <div id="ca452877fa434f28b6a70babc8d638af" class="chart-container" style="width:900px; height:500px; "></div>
+    <div id="f4adcf36f3d248c0bc3ee57341c1788a" class="chart-container" style="width:900px; height:500px; "></div>
     <script>
-        var chart_ca452877fa434f28b6a70babc8d638af = echarts.init(
-            document.getElementById('ca452877fa434f28b6a70babc8d638af'), 'white', {renderer: 'canvas', locale: 'ZH'});
-        var option_ca452877fa434f28b6a70babc8d638af = {
+        var chart_f4adcf36f3d248c0bc3ee57341c1788a = echarts.init(
+            document.getElementById('f4adcf36f3d248c0bc3ee57341c1788a'), 'white', {renderer: 'canvas', locale: 'ZH'});
+        var option_f4adcf36f3d248c0bc3ee57341c1788a = {
     "animation": true,
     "animationThreshold": 2000,
     "animationDuration": 1000,
@@ -54,107 +54,86 @@
             "data": [
                 {
                     "name": "AI-Assisted Development",
-                    "value": 75.0,
+                    "value": 15.0,
                     "textStyle": {
-                        "color": "rgb(57,141,101)"
+                        "color": "rgb(87,122,122)"
                     }
                 },
                 {
-                    "name": "Programming",
-                    "value": 65.0,
+                    "name": "Python",
+                    "value": 12.0,
                     "textStyle": {
-                        "color": "rgb(5,16,81)"
+                        "color": "rgb(150,52,86)"
                     }
                 },
                 {
                     "name": "Data Analysis",
-                    "value": 45.0,
+                    "value": 10.0,
                     "textStyle": {
-                        "color": "rgb(15,78,50)"
+                        "color": "rgb(45,160,47)"
                     }
                 },
                 {
                     "name": "Workflow Automation",
-                    "value": 35.0,
+                    "value": 8.0,
                     "textStyle": {
-                        "color": "rgb(135,89,3)"
+                        "color": "rgb(125,90,80)"
                     }
                 },
                 {
                     "name": "Machine Learning",
-                    "value": 30.0,
+                    "value": 7.000000000000001,
                     "textStyle": {
-                        "color": "rgb(126,97,25)"
+                        "color": "rgb(119,140,152)"
                     }
                 },
                 {
                     "name": "Product Management",
-                    "value": 25.0,
+                    "value": 6.0,
                     "textStyle": {
-                        "color": "rgb(108,77,148)"
-                    }
-                },
-                {
-                    "name": "Project Management",
-                    "value": 20.0,
-                    "textStyle": {
-                        "color": "rgb(51,132,7)"
+                        "color": "rgb(86,51,79)"
                     }
                 },
                 {
                     "name": "API Development",
-                    "value": 15.0,
-                    "textStyle": {
-                        "color": "rgb(103,147,36)"
-                    }
-                },
-                {
-                    "name": "Web Development",
-                    "value": 10.0,
-                    "textStyle": {
-                        "color": "rgb(100,133,131)"
-                    }
-                },
-                {
-                    "name": "Natural Language Processing",
                     "value": 5.0,
                     "textStyle": {
-                        "color": "rgb(58,9,27)"
-                    }
-                },
-                {
-                    "name": "Chrome",
-                    "value": 80.0,
-                    "textStyle": {
-                        "color": "rgb(90,98,150)"
+                        "color": "rgb(154,75,45)"
                     }
                 },
                 {
                     "name": "Feishu",
-                    "value": 70.0,
+                    "value": 35.0,
                     "textStyle": {
-                        "color": "rgb(146,135,59)"
+                        "color": "rgb(67,105,23)"
                     }
                 },
                 {
-                    "name": "Zhihu",
-                    "value": 60.0,
+                    "name": "Chrome",
+                    "value": 25.0,
                     "textStyle": {
-                        "color": "rgb(4,145,48)"
+                        "color": "rgb(143,14,37)"
                     }
                 },
                 {
-                    "name": "ActivityWatch",
-                    "value": 50.0,
+                    "name": "GitHub",
+                    "value": 15.0,
                     "textStyle": {
-                        "color": "rgb(153,143,125)"
+                        "color": "rgb(97,154,41)"
                     }
                 },
                 {
-                    "name": "ChatShare AI",
-                    "value": 40.0,
+                    "name": "\u77e5\u4e4e",
+                    "value": 10.0,
                     "textStyle": {
-                        "color": "rgb(19,118,31)"
+                        "color": "rgb(109,75,84)"
+                    }
+                },
+                {
+                    "name": "Trae AI",
+                    "value": 5.0,
+                    "textStyle": {
+                        "color": "rgb(48,150,145)"
                     }
                 }
             ],
@@ -225,7 +204,7 @@
         }
     ]
 };
-        chart_ca452877fa434f28b6a70babc8d638af.setOption(option_ca452877fa434f28b6a70babc8d638af);
+        chart_f4adcf36f3d248c0bc3ee57341c1788a.setOption(option_f4adcf36f3d248c0bc3ee57341c1788a);
     </script>
 </body>
 </html>
