feat(chat): 新增Obsidian导出和CherryStudio备份支持，改进LLM错误处理
- 新增Obsidian笔记导出功能，支持按会话导出为Markdown文件
- 新增CherryStudio备份源支持，可从ZIP备份中提取会话数据
- 改进LLM客户端错误处理，添加详细HTTP错误信息和元数据返回
- 新增Feishu推送决策逻辑，支持根据LLM使用情况和关键词数量决定是否推送
- 扩展聊天源类型，支持obsidian、cherrystudio_backup和cherrystudio API模式
- 更新配置系统，支持provider/base_model自动解析base_url
- 添加环境变量加载和调试模式支持
- 新增相关单元测试覆盖新功能

--- a/wordcloud_1d.html
+++ b/wordcloud_1d.html
@@ -9,11 +9,11 @@
     
 </head>
 <body >
-    <div id="93057d7701694269a06bff6eff7b907e" class="chart-container" style="width:900px; height:500px; "></div>
+    <div id="a1192a88c42048dda954d283a92fffc5" class="chart-container" style="width:900px; height:500px; "></div>
     <script>
-        var chart_93057d7701694269a06bff6eff7b907e = echarts.init(
-            document.getElementById('93057d7701694269a06bff6eff7b907e'), 'white', {renderer: 'canvas', locale: 'ZH'});
-        var option_93057d7701694269a06bff6eff7b907e = {
+        var chart_a1192a88c42048dda954d283a92fffc5 = echarts.init(
+            document.getElementById('a1192a88c42048dda954d283a92fffc5'), 'white', {renderer: 'canvas', locale: 'ZH'});
+        var option_a1192a88c42048dda954d283a92fffc5 = {
     "animation": true,
     "animationThreshold": 2000,
     "animationDuration": 1000,
@@ -53,59 +53,59 @@
             ],
             "data": [
                 {
-                    "name": "Python Development",
-                    "value": 45.0,
+                    "name": "AI and Machine Learning",
+                    "value": 50.0,
                     "textStyle": {
-                        "color": "rgb(52,128,25)"
-                    }
-                },
-                {
-                    "name": "Git and Version Control",
-                    "value": 35.0,
-                    "textStyle": {
-                        "color": "rgb(103,131,120)"
-                    }
-                },
-                {
-                    "name": "AI-Assisted Development",
-                    "value": 25.0,
-                    "textStyle": {
-                        "color": "rgb(85,70,54)"
+                        "color": "rgb(4,98,121)"
                     }
                 },
                 {
                     "name": "Data Analysis",
-                    "value": 15.0,
+                    "value": 30.0,
                     "textStyle": {
-                        "color": "rgb(30,62,96)"
+                        "color": "rgb(17,4,117)"
                     }
                 },
                 {
-                    "name": "Workflow Automation",
+                    "name": "Software Development",
+                    "value": 20.0,
+                    "textStyle": {
+                        "color": "rgb(46,51,84)"
+                    }
+                },
+                {
+                    "name": "Project Management",
                     "value": 10.0,
                     "textStyle": {
-                        "color": "rgb(92,13,89)"
+                        "color": "rgb(110,61,145)"
                     }
                 },
                 {
-                    "name": "Trae AI",
-                    "value": 50.0,
+                    "name": "Documentation and Knowledge Management",
+                    "value": 10.0,
                     "textStyle": {
-                        "color": "rgb(35,17,3)"
+                        "color": "rgb(0,17,15)"
                     }
                 },
                 {
                     "name": "GitHub",
-                    "value": 30.0,
+                    "value": 40.0,
                     "textStyle": {
-                        "color": "rgb(14,67,121)"
+                        "color": "rgb(46,84,127)"
                     }
                 },
                 {
-                    "name": "DBeaver",
+                    "name": "Cherry Studio",
+                    "value": 30.0,
+                    "textStyle": {
+                        "color": "rgb(26,137,154)"
+                    }
+                },
+                {
+                    "name": "Bilibili",
                     "value": 20.0,
                     "textStyle": {
-                        "color": "rgb(15,9,134)"
+                        "color": "rgb(76,44,72)"
                     }
                 }
             ],
@@ -176,7 +176,7 @@
         }
     ]
 };
-        chart_93057d7701694269a06bff6eff7b907e.setOption(option_93057d7701694269a06bff6eff7b907e);
+        chart_a1192a88c42048dda954d283a92fffc5.setOption(option_a1192a88c42048dda954d283a92fffc5);
     </script>
 </body>
 </html>
