--- a/wordcloud_7d.html
+++ b/wordcloud_7d.html
@@ -9,11 +9,11 @@
     
 </head>
 <body >
-    <div id="f4adcf36f3d248c0bc3ee57341c1788a" class="chart-container" style="width:900px; height:500px; "></div>
+    <div id="ea4da1755fb442bebe4dc312d1bbddf1" class="chart-container" style="width:900px; height:500px; "></div>
     <script>
-        var chart_f4adcf36f3d248c0bc3ee57341c1788a = echarts.init(
-            document.getElementById('f4adcf36f3d248c0bc3ee57341c1788a'), 'white', {renderer: 'canvas', locale: 'ZH'});
-        var option_f4adcf36f3d248c0bc3ee57341c1788a = {
+        var chart_ea4da1755fb442bebe4dc312d1bbddf1 = echarts.init(
+            document.getElementById('ea4da1755fb442bebe4dc312d1bbddf1'), 'white', {renderer: 'canvas', locale: 'ZH'});
+        var option_ea4da1755fb442bebe4dc312d1bbddf1 = {
     "animation": true,
     "animationThreshold": 2000,
     "animationDuration": 1000,
@@ -56,84 +56,84 @@
                     "name": "AI-Assisted Development",
                     "value": 15.0,
                     "textStyle": {
-                        "color": "rgb(87,122,122)"
+                        "color": "rgb(57,146,31)"
                     }
                 },
                 {
                     "name": "Python",
                     "value": 12.0,
                     "textStyle": {
-                        "color": "rgb(150,52,86)"
+                        "color": "rgb(93,42,84)"
                     }
                 },
                 {
                     "name": "Data Analysis",
                     "value": 10.0,
                     "textStyle": {
-                        "color": "rgb(45,160,47)"
+                        "color": "rgb(71,64,77)"
                     }
                 },
                 {
                     "name": "Workflow Automation",
                     "value": 8.0,
                     "textStyle": {
-                        "color": "rgb(125,90,80)"
+                        "color": "rgb(10,120,64)"
                     }
                 },
                 {
                     "name": "Machine Learning",
                     "value": 7.000000000000001,
                     "textStyle": {
-                        "color": "rgb(119,140,152)"
+                        "color": "rgb(113,148,68)"
                     }
                 },
                 {
                     "name": "Product Management",
                     "value": 6.0,
                     "textStyle": {
-                        "color": "rgb(86,51,79)"
+                        "color": "rgb(107,88,141)"
                     }
                 },
                 {
                     "name": "API Development",
                     "value": 5.0,
                     "textStyle": {
-                        "color": "rgb(154,75,45)"
+                        "color": "rgb(39,47,123)"
                     }
                 },
                 {
                     "name": "Feishu",
-                    "value": 35.0,
+                    "value": 40.0,
                     "textStyle": {
-                        "color": "rgb(67,105,23)"
+                        "color": "rgb(144,73,78)"
                     }
                 },
                 {
-                    "name": "Chrome",
-                    "value": 25.0,
+                    "name": "Zhihu",
+                    "value": 30.0,
                     "textStyle": {
-                        "color": "rgb(143,14,37)"
+                        "color": "rgb(116,117,20)"
                     }
                 },
                 {
-                    "name": "GitHub",
+                    "name": "Chrome Web Store",
                     "value": 15.0,
                     "textStyle": {
-                        "color": "rgb(97,154,41)"
+                        "color": "rgb(113,160,87)"
                     }
                 },
                 {
-                    "name": "\u77e5\u4e4e",
+                    "name": "ActivityWatch",
                     "value": 10.0,
                     "textStyle": {
-                        "color": "rgb(109,75,84)"
+                        "color": "rgb(97,83,72)"
                     }
                 },
                 {
-                    "name": "Trae AI",
+                    "name": "Markdown to Word Converter",
                     "value": 5.0,
                     "textStyle": {
-                        "color": "rgb(48,150,145)"
+                        "color": "rgb(13,100,118)"
                     }
                 }
             ],
@@ -204,7 +204,7 @@
         }
     ]
 };
-        chart_f4adcf36f3d248c0bc3ee57341c1788a.setOption(option_f4adcf36f3d248c0bc3ee57341c1788a);
+        chart_ea4da1755fb442bebe4dc312d1bbddf1.setOption(option_ea4da1755fb442bebe4dc312d1bbddf1);
     </script>
 </body>
 </html>
